examples/test/testpolicy364.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy364
  namespace: namespace186
spec:
  podSelector:
    matchLabels:
      key3: value7
      key38: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value1
          key12: value23
      podSelector:
        matchLabels:
          key31: value13
          key18: value15
          key6: value7
